# search-ai-backend

./: .gitignore
backend/: Dockerfile  docker-compose.dev.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2957aa12056d_add_file_hash.py  f5fd778d27ad_initial.py
backend/src/: app.py  database.py  models.py  worker.py
backend/src/api/: files.py  search.py
backend/src/core/: ai_config.py  ai_scheme.py
backend/src/schemas/: ai_model.py  files.py  question.py
backend/src/services/: ai_service.py  file_service.py  files.py  fix_words_service.py  pdf_service.py  vector_db_service.py
backend/src/tasks/: files.py  search.py
backend/tests/: conftest.py  test_api.py
